--- a/workspace/package.json
+++ b/workspace/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "axois": "^0.0.1-security",
     "immer": "^10.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
