--- a/workspace/ch05-router/02/package.json
+++ b/workspace/ch05-router/02/package.json
@@ -10,16 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "axois": "^0.0.1-security",
     "immer": "^10.1.1",
-    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.2",
-    "react-router-dom": "^6.28.0",
-    "react-spinners": "^0.14.1",
-    "spinners": "^1.2.2"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
