--- a/workspace/package.json
+++ b/workspace/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "axois": "^0.0.1-security",
     "immer": "^10.1.1",
@@ -20,8 +21,10 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-spinners": "^0.14.1",
+    "recoil": "^0.7.7",
     "redux": "^5.0.1",
-    "spinners": "^1.2.2"
+    "spinners": "^1.2.2",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
